[package]
name = "fast-astar"
version = "0.1.0"
authors = ["Tobias Nienhaus <me@tobiasnienhaus.me>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For a graph implementation we can build off of
graphlib = "0.6.2"
# Otherwise graphlib won't compile
hex = "0.4.3"
# For loading images to build graphs
image = "0.23.4"
